# ringbuffer

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.sh  main.c  ringbuffer.c  ringbuffer.h
cppwrapper/: CMakeLists.txt  Makefile  main.cpp  ringbufferwrapper.cpp  ringbufferwrapper.h  wrapper
src/: CMakeLists.txt  ringbuffer.c  ringbuffer.h
src/ringbuffer/c/: CMakeLists.txt  ringbuffer.c  ringbuffer.h
src/ringbuffer/cpp/: CMakeLists.txt  ringbufferwrapper.cpp  ringbufferwrapper.h
tests/: CMakeLists.txt  Makefile  appendBufferTest.c  appendBufferTest.h  getBufferTest.c  getBufferTest.h  initBufferTest.c  initBufferTest.h  test  tests.c
